[package]
name = "matter-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tungstenite = "0.20.0"
url = "2.4.0"
